// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectItemsModal ItemComponent should render 1`] = `
<div>
  <div
    class="autofit-col autofit-col-expand"
  >
    test
  </div>
</div>
`;

exports[`SelectItemsModal ItemComponent should render with a custom className 1`] = `
<div>
  <div
    class="autofit-col test autofit-col-expand"
  >
    test
  </div>
</div>
`;

exports[`SelectItemsModal should render 1`] = `
<div>
  <div
    aria-modal="true"
    class="modal-dialog searchable-modal-root modal-lg"
    role="dialog"
  >
    <div
      class="modal-content"
    >
      <div
        class="modal-header has-title"
      >
        <div
          class="h4 modal-title"
        >
          Select Fields
        </div>
        <button
          aria-label="Close"
          class="button-root close btn btn-secondary"
          type="button"
        >
          <svg
            class="lexicon-icon lexicon-icon-times icon-root"
            role="presentation"
          >
            <use
              href="#times"
            />
          </svg>
        </button>
      </div>
      <div
        class="toolbar-root"
      >
        <nav
          class="navbar navbar-root my-2 management-bar management-bar-light navbar-expand"
        >
          <div
            class="container-fluid"
          >
            <ul
              class="nav-root front-nav navbar-nav"
              role="tablist"
            />
            <div
              class="navbar-form navbar-form-autofit mx-2"
            >
              <div
                class="input-group search"
              >
                <div
                  class="input-group-item"
                >
                  <input
                    class="input-root form-control input-group-inset input-group-inset-after"
                    placeholder="Search"
                    type="text"
                    value=""
                  />
                  <div
                    class="input-group-inset-item input-group-inset-item-after"
                  >
                    <button
                      aria-label="Search"
                      class="button-root btn btn-unstyled"
                      type="button"
                    >
                      <svg
                        class="lexicon-icon lexicon-icon-search icon-root"
                        role="presentation"
                      >
                        <use
                          href="#search"
                        />
                      </svg>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </nav>
      </div>
      <div
        class="scroll-container"
      >
        <span
          aria-hidden="true"
          class="loading-root center loading-animation"
        />
      </div>
      <div
        class="modal-footer"
      >
        <div
          class="modal-footer"
        >
          <button
            class="button-root btn btn-secondary"
            type="button"
          >
            Cancel
          </button>
          <button
            class="button-root btn btn-primary"
            disabled=""
            type="button"
          >
            Select
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectItemsModal should render items as an entity list 1`] = `
<div>
  <div
    aria-modal="true"
    class="modal-dialog searchable-modal-root modal-lg"
    role="dialog"
  >
    <div
      class="modal-content"
    >
      <div
        class="modal-header has-title"
      >
        <div
          class="h4 modal-title"
        >
          Select Fields
        </div>
        <button
          aria-label="Close"
          class="button-root close btn btn-secondary"
          type="button"
        >
          <svg
            class="lexicon-icon lexicon-icon-times icon-root"
            role="presentation"
          >
            <use
              href="#times"
            />
          </svg>
        </button>
      </div>
      <div
        class="toolbar-root"
      >
        <nav
          class="navbar navbar-root my-2 management-bar management-bar-light navbar-expand"
        >
          <div
            class="container-fluid"
          >
            <ul
              class="nav-root front-nav navbar-nav"
              role="tablist"
            />
            <div
              class="navbar-form navbar-form-autofit mx-2"
            >
              <div
                class="input-group search"
              >
                <div
                  class="input-group-item"
                >
                  <input
                    class="input-root form-control input-group-inset input-group-inset-after"
                    placeholder="Search"
                    type="text"
                    value=""
                  />
                  <div
                    class="input-group-inset-item input-group-inset-item-after"
                  >
                    <button
                      aria-label="Search"
                      class="button-root btn btn-unstyled"
                      type="button"
                    >
                      <svg
                        class="lexicon-icon lexicon-icon-search icon-root"
                        role="presentation"
                      >
                        <use
                          href="#search"
                        />
                      </svg>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </nav>
      </div>
      <div
        class="scroll-container"
      >
        <span
          aria-hidden="true"
          class="loading-root center loading-animation"
        />
      </div>
      <div
        class="modal-footer"
      >
        <div
          class="modal-footer"
        >
          <button
            class="button-root btn btn-secondary"
            type="button"
          >
            Cancel
          </button>
          <button
            class="button-root btn btn-primary"
            disabled=""
            type="button"
          >
            Select
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectItemsModal should render with a blank submit 1`] = `
<div>
  <div
    aria-modal="true"
    class="modal-dialog searchable-modal-root modal-lg"
    role="dialog"
  >
    <div
      class="modal-content"
    >
      <div
        class="modal-header has-title"
      >
        <div
          class="h4 modal-title"
        >
          Select Fields
        </div>
        <button
          aria-label="Close"
          class="button-root close btn btn-secondary"
          type="button"
        >
          <svg
            class="lexicon-icon lexicon-icon-times icon-root"
            role="presentation"
          >
            <use
              href="#times"
            />
          </svg>
        </button>
      </div>
      <div
        class="toolbar-root"
      >
        <nav
          class="navbar navbar-root my-2 management-bar management-bar-light navbar-expand"
        >
          <div
            class="container-fluid"
          >
            <ul
              class="nav-root front-nav navbar-nav"
              role="tablist"
            />
            <div
              class="navbar-form navbar-form-autofit mx-2"
            >
              <div
                class="input-group search"
              >
                <div
                  class="input-group-item"
                >
                  <input
                    class="input-root form-control input-group-inset input-group-inset-after"
                    placeholder="Search"
                    type="text"
                    value=""
                  />
                  <div
                    class="input-group-inset-item input-group-inset-item-after"
                  >
                    <button
                      aria-label="Search"
                      class="button-root btn btn-unstyled"
                      type="button"
                    >
                      <svg
                        class="lexicon-icon lexicon-icon-search icon-root"
                        role="presentation"
                      >
                        <use
                          href="#search"
                        />
                      </svg>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </nav>
      </div>
      <div
        class="scroll-container"
      >
        <div
          class="no-results-root flex-grow-1"
        >
          <div
            class="no-results-content spacer"
          >
            <div
              class="h4 no-results-title"
            >
              There are no items found.
            </div>
          </div>
        </div>
      </div>
      <div
        class="modal-footer"
      >
        <div
          class="modal-footer"
        >
          <button
            class="button-root btn btn-secondary"
            type="button"
          >
            Cancel
          </button>
          <button
            class="button-root btn btn-primary"
            type="button"
          >
            <span
              aria-hidden="true"
              class="loading-root d-inline-block mr-2 loading-animation"
            />
            message
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectItemsModal should render with a custom submit message 1`] = `
<div>
  <div
    aria-modal="true"
    class="modal-dialog searchable-modal-root modal-lg"
    role="dialog"
  >
    <div
      class="modal-content"
    >
      <div
        class="modal-header has-title"
      >
        <div
          class="h4 modal-title"
        >
          Select Fields
        </div>
        <button
          aria-label="Close"
          class="button-root close btn btn-secondary"
          type="button"
        >
          <svg
            class="lexicon-icon lexicon-icon-times icon-root"
            role="presentation"
          >
            <use
              href="#times"
            />
          </svg>
        </button>
      </div>
      <div
        class="toolbar-root"
      >
        <nav
          class="navbar navbar-root my-2 management-bar management-bar-light navbar-expand"
        >
          <div
            class="container-fluid"
          >
            <ul
              class="nav-root front-nav navbar-nav"
              role="tablist"
            />
            <div
              class="navbar-form navbar-form-autofit mx-2"
            >
              <div
                class="input-group search"
              >
                <div
                  class="input-group-item"
                >
                  <input
                    class="input-root form-control input-group-inset input-group-inset-after"
                    placeholder="Search"
                    type="text"
                    value=""
                  />
                  <div
                    class="input-group-inset-item input-group-inset-item-after"
                  >
                    <button
                      aria-label="Search"
                      class="button-root btn btn-unstyled"
                      type="button"
                    >
                      <svg
                        class="lexicon-icon lexicon-icon-search icon-root"
                        role="presentation"
                      >
                        <use
                          href="#search"
                        />
                      </svg>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </nav>
      </div>
      <div
        class="scroll-container"
      >
        <span
          aria-hidden="true"
          class="loading-root center loading-animation"
        />
      </div>
      <div
        class="modal-footer"
      >
        <div
          class="modal-footer"
        >
          <button
            class="button-root btn btn-secondary"
            type="button"
          >
            Cancel
          </button>
          <button
            class="button-root btn btn-primary"
            disabled=""
            type="button"
          >
            Custom Submit Message
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectItemsModal should render with a custom title 1`] = `
<div>
  <div
    aria-modal="true"
    class="modal-dialog searchable-modal-root modal-lg"
    role="dialog"
  >
    <div
      class="modal-content"
    >
      <div
        class="modal-header has-title"
      >
        <div
          class="h4 modal-title"
        >
          Custom Title
        </div>
        <button
          aria-label="Close"
          class="button-root close btn btn-secondary"
          type="button"
        >
          <svg
            class="lexicon-icon lexicon-icon-times icon-root"
            role="presentation"
          >
            <use
              href="#times"
            />
          </svg>
        </button>
      </div>
      <div
        class="toolbar-root"
      >
        <nav
          class="navbar navbar-root my-2 management-bar management-bar-light navbar-expand"
        >
          <div
            class="container-fluid"
          >
            <ul
              class="nav-root front-nav navbar-nav"
              role="tablist"
            />
            <div
              class="navbar-form navbar-form-autofit mx-2"
            >
              <div
                class="input-group search"
              >
                <div
                  class="input-group-item"
                >
                  <input
                    class="input-root form-control input-group-inset input-group-inset-after"
                    placeholder="Search"
                    type="text"
                    value=""
                  />
                  <div
                    class="input-group-inset-item input-group-inset-item-after"
                  >
                    <button
                      aria-label="Search"
                      class="button-root btn btn-unstyled"
                      type="button"
                    >
                      <svg
                        class="lexicon-icon lexicon-icon-search icon-root"
                        role="presentation"
                      >
                        <use
                          href="#search"
                        />
                      </svg>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </nav>
      </div>
      <div
        class="scroll-container"
      >
        <span
          aria-hidden="true"
          class="loading-root center loading-animation"
        />
      </div>
      <div
        class="modal-footer"
      >
        <div
          class="modal-footer"
        >
          <button
            class="button-root btn btn-secondary"
            type="button"
          >
            Cancel
          </button>
          <button
            class="button-root btn btn-primary"
            disabled=""
            type="button"
          >
            Select
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectItemsModal should render with a successful submit 1`] = `
<div>
  <div
    aria-modal="true"
    class="modal-dialog searchable-modal-root modal-lg"
    role="dialog"
  >
    <div
      class="modal-content"
    >
      <div
        class="modal-header has-title"
      >
        <div
          class="h4 modal-title"
        >
          Select Fields
        </div>
        <button
          aria-label="Close"
          class="button-root close btn btn-secondary"
          type="button"
        >
          <svg
            class="lexicon-icon lexicon-icon-times icon-root"
            role="presentation"
          >
            <use
              href="#times"
            />
          </svg>
        </button>
      </div>
      <div
        class="toolbar-root"
      >
        <nav
          class="navbar navbar-root my-2 management-bar management-bar-light navbar-expand"
        >
          <div
            class="container-fluid"
          >
            <ul
              class="nav-root front-nav navbar-nav"
              role="tablist"
            />
            <div
              class="navbar-form navbar-form-autofit mx-2"
            >
              <div
                class="input-group search"
              >
                <div
                  class="input-group-item"
                >
                  <input
                    class="input-root form-control input-group-inset input-group-inset-after"
                    placeholder="Search"
                    type="text"
                    value=""
                  />
                  <div
                    class="input-group-inset-item input-group-inset-item-after"
                  >
                    <button
                      aria-label="Search"
                      class="button-root btn btn-unstyled"
                      type="button"
                    >
                      <svg
                        class="lexicon-icon lexicon-icon-search icon-root"
                        role="presentation"
                      >
                        <use
                          href="#search"
                        />
                      </svg>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </nav>
      </div>
      <div
        class="scroll-container"
      >
        <div
          class="no-results-root flex-grow-1"
        >
          <div
            class="no-results-content spacer"
          >
            <div
              class="h4 no-results-title"
            >
              There are no items found.
            </div>
          </div>
        </div>
      </div>
      <div
        class="modal-footer"
      >
        <div
          class="modal-footer"
        >
          <button
            class="button-root btn btn-secondary"
            type="button"
          >
            Cancel
          </button>
          <button
            class="button-root btn btn-primary"
            type="button"
          >
            message
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectItemsModal should render with an unsuccessful submit 1`] = `
<div>
  <div
    aria-modal="true"
    class="modal-dialog searchable-modal-root modal-lg"
    role="dialog"
  >
    <div
      class="modal-content"
    >
      <div
        class="modal-header has-title"
      >
        <div
          class="h4 modal-title"
        >
          Select Fields
        </div>
        <button
          aria-label="Close"
          class="button-root close btn btn-secondary"
          type="button"
        >
          <svg
            class="lexicon-icon lexicon-icon-times icon-root"
            role="presentation"
          >
            <use
              href="#times"
            />
          </svg>
        </button>
      </div>
      <div
        class="toolbar-root"
      >
        <nav
          class="navbar navbar-root my-2 management-bar management-bar-light navbar-expand"
        >
          <div
            class="container-fluid"
          >
            <ul
              class="nav-root front-nav navbar-nav"
              role="tablist"
            />
            <div
              class="navbar-form navbar-form-autofit mx-2"
            >
              <div
                class="input-group search"
              >
                <div
                  class="input-group-item"
                >
                  <input
                    class="input-root form-control input-group-inset input-group-inset-after"
                    placeholder="Search"
                    type="text"
                    value=""
                  />
                  <div
                    class="input-group-inset-item input-group-inset-item-after"
                  >
                    <button
                      aria-label="Search"
                      class="button-root btn btn-unstyled"
                      type="button"
                    >
                      <svg
                        class="lexicon-icon lexicon-icon-search icon-root"
                        role="presentation"
                      >
                        <use
                          href="#search"
                        />
                      </svg>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </nav>
      </div>
      <div
        class="scroll-container"
      >
        <div
          class="no-results-root flex-grow-1"
        >
          <div
            class="no-results-content spacer"
          >
            <div
              class="h4 no-results-title"
            >
              There are no items found.
            </div>
          </div>
        </div>
      </div>
      <div
        class="modal-footer"
      >
        <div
          class="modal-footer"
        >
          <button
            class="button-root btn btn-secondary"
            type="button"
          >
            Cancel
          </button>
          <button
            class="button-root btn btn-primary"
            type="button"
          >
            <span
              aria-hidden="true"
              class="loading-root d-inline-block mr-2 loading-animation"
            />
            message
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectItemsModal should render with selectedItems 1`] = `
<div>
  <div
    aria-modal="true"
    class="modal-dialog searchable-modal-root modal-lg"
    role="dialog"
  >
    <div
      class="modal-content"
    >
      <div
        class="modal-header has-title"
      >
        <div
          class="h4 modal-title"
        >
          Select Fields
        </div>
        <button
          aria-label="Close"
          class="button-root close btn btn-secondary"
          type="button"
        >
          <svg
            class="lexicon-icon lexicon-icon-times icon-root"
            role="presentation"
          >
            <use
              href="#times"
            />
          </svg>
        </button>
      </div>
      <div
        class="toolbar-root"
      >
        <nav
          class="navbar navbar-root my-2 management-bar management-bar-light navbar-expand"
        >
          <div
            class="container-fluid"
          >
            <ul
              class="nav-root front-nav navbar-nav"
              role="tablist"
            />
            <div
              class="navbar-form navbar-form-autofit mx-2"
            >
              <div
                class="input-group search"
              >
                <div
                  class="input-group-item"
                >
                  <input
                    class="input-root form-control input-group-inset input-group-inset-after"
                    placeholder="Search"
                    type="text"
                    value=""
                  />
                  <div
                    class="input-group-inset-item input-group-inset-item-after"
                  >
                    <button
                      aria-label="Search"
                      class="button-root btn btn-unstyled"
                      type="button"
                    >
                      <svg
                        class="lexicon-icon lexicon-icon-search icon-root"
                        role="presentation"
                      >
                        <use
                          href="#search"
                        />
                      </svg>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </nav>
      </div>
      <div
        class="scroll-container"
      >
        <span
          aria-hidden="true"
          class="loading-root center loading-animation"
        />
      </div>
      <div
        class="modal-footer"
      >
        <div
          class="modal-footer"
        >
          <button
            class="button-root btn btn-secondary"
            type="button"
          >
            Cancel
          </button>
          <button
            class="button-root btn btn-primary"
            disabled=""
            type="button"
          >
            Select
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectItemsModal should render with selectedItems with the disable selected datasource 1`] = `
<div>
  <div
    aria-modal="true"
    class="modal-dialog searchable-modal-root modal-lg"
    role="dialog"
  >
    <div
      class="modal-content"
    >
      <div
        class="modal-header has-title"
      >
        <div
          class="h4 modal-title"
        >
          Select Fields
        </div>
        <button
          aria-label="Close"
          class="button-root close btn btn-secondary"
          type="button"
        >
          <svg
            class="lexicon-icon lexicon-icon-times icon-root"
            role="presentation"
          >
            <use
              href="#times"
            />
          </svg>
        </button>
      </div>
      <div
        class="toolbar-root"
      >
        <nav
          class="navbar navbar-root my-2 management-bar management-bar-light navbar-expand"
        >
          <div
            class="container-fluid"
          >
            <ul
              class="nav-root front-nav navbar-nav"
              role="tablist"
            />
            <div
              class="navbar-form navbar-form-autofit mx-2"
            >
              <div
                class="input-group search"
              >
                <div
                  class="input-group-item"
                >
                  <input
                    class="input-root form-control input-group-inset input-group-inset-after"
                    placeholder="Search"
                    type="text"
                    value=""
                  />
                  <div
                    class="input-group-inset-item input-group-inset-item-after"
                  >
                    <button
                      aria-label="Search"
                      class="button-root btn btn-unstyled"
                      type="button"
                    >
                      <svg
                        class="lexicon-icon lexicon-icon-search icon-root"
                        role="presentation"
                      >
                        <use
                          href="#search"
                        />
                      </svg>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </nav>
      </div>
      <div
        class="scroll-container"
      >
        <div
          class="no-results-root flex-grow-1"
        >
          <div
            class="no-results-content spacer"
          >
            <div
              class="h4 no-results-title"
            >
              There are no items found.
            </div>
          </div>
        </div>
      </div>
      <div
        class="modal-footer"
      >
        <div
          class="modal-footer"
        >
          <button
            class="button-root btn btn-secondary"
            type="button"
          >
            Cancel
          </button>
          <button
            class="button-root btn btn-primary"
            disabled=""
            type="button"
          >
            Select
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectItemsModal should render without a toolbar 1`] = `
<div>
  <div
    aria-modal="true"
    class="modal-dialog searchable-modal-root modal-lg"
    role="dialog"
  >
    <div
      class="modal-content"
    >
      <div
        class="modal-header has-title"
      >
        <div
          class="h4 modal-title"
        >
          Select Fields
        </div>
        <button
          aria-label="Close"
          class="button-root close btn btn-secondary"
          type="button"
        >
          <svg
            class="lexicon-icon lexicon-icon-times icon-root"
            role="presentation"
          >
            <use
              href="#times"
            />
          </svg>
        </button>
      </div>
      <div
        class="scroll-container"
      >
        <span
          aria-hidden="true"
          class="loading-root center loading-animation"
        />
      </div>
      <div
        class="modal-footer"
      >
        <div
          class="modal-footer"
        >
          <button
            class="button-root btn btn-secondary"
            type="button"
          >
            Cancel
          </button>
          <button
            class="button-root btn btn-primary"
            disabled=""
            type="button"
          >
            Select
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectItemsModal should render without the sort button 1`] = `
<div>
  <div
    aria-modal="true"
    class="modal-dialog searchable-modal-root modal-lg"
    role="dialog"
  >
    <div
      class="modal-content"
    >
      <div
        class="modal-header has-title"
      >
        <div
          class="h4 modal-title"
        >
          Select Fields
        </div>
        <button
          aria-label="Close"
          class="button-root close btn btn-secondary"
          type="button"
        >
          <svg
            class="lexicon-icon lexicon-icon-times icon-root"
            role="presentation"
          >
            <use
              href="#times"
            />
          </svg>
        </button>
      </div>
      <div
        class="toolbar-root"
      >
        <nav
          class="navbar navbar-root my-2 management-bar management-bar-light navbar-expand"
        >
          <div
            class="container-fluid"
          >
            <ul
              class="nav-root front-nav navbar-nav"
              role="tablist"
            />
            <div
              class="navbar-form navbar-form-autofit mx-2"
            >
              <div
                class="input-group search"
              >
                <div
                  class="input-group-item"
                >
                  <input
                    class="input-root form-control input-group-inset input-group-inset-after"
                    placeholder="Search"
                    type="text"
                    value=""
                  />
                  <div
                    class="input-group-inset-item input-group-inset-item-after"
                  >
                    <button
                      aria-label="Search"
                      class="button-root btn btn-unstyled"
                      type="button"
                    >
                      <svg
                        class="lexicon-icon lexicon-icon-search icon-root"
                        role="presentation"
                      >
                        <use
                          href="#search"
                        />
                      </svg>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </nav>
      </div>
      <div
        class="scroll-container"
      >
        <span
          aria-hidden="true"
          class="loading-root center loading-animation"
        />
      </div>
      <div
        class="modal-footer"
      >
        <div
          class="modal-footer"
        >
          <button
            class="button-root btn btn-secondary"
            type="button"
          >
            Cancel
          </button>
          <button
            class="button-root btn btn-primary"
            disabled=""
            type="button"
          >
            Select
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
